--- a/styles.css
+++ b/styles.css
@@ -3,5 +3,6 @@
 			background-color: lightblue;
 			border: 15px solid blue;
 			padding:50px;
-			margin:20px;			
+			margin:20px;		
+		box-sizing:border-box;
 		}
